--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -20,6 +20,7 @@ body {
   font-size: 16px;
   text-align: center;
   font-family: "Roboto";
+  min-width: $viewport-width + 100;
 }
 
 h1 {
@@ -234,9 +235,10 @@ section {
   }
 
   img {
+    position: relative;
+    top: 2px;
     margin-right: 10px;
     display: inline-block;
-    vertical-align: text-top;
   }
 
   a {
