fixed z-index issue on live demo

--- a/app/index.ejs
+++ b/app/index.ejs
@@ -48,8 +48,7 @@
     </h1>
     <h2><%= tagline %></h2>
 
-    <a name="demo"></a>
-    <div class="browser">
+    <div class="browser" id="demo">
       <iframe src="https://rtail-demo.lukibear.com/#/streams/rtail.org"></iframe>
     </div>
   </header>
