added paypal link

--- a/app/index.ejs
+++ b/app/index.ejs
@@ -151,7 +151,7 @@
       <a href="mailto:info@rtail.org"></a>
     </div>
 
-    <a class="btn main" href="mailto:info@rtail.org">Sponsor this project!</a>
+    <a class="btn main" href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=info%40rtail%2eorg&lc=US&item_name=rtail&item_number=rtail&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHosted">Sponsor this project!</a>
   </section>
 
   <footer>
