--- a/app/scss/dark-theme.scss
+++ b/app/scss/dark-theme.scss
@@ -13,6 +13,7 @@ $stream-search-bg-color: #404E57;
 $stream-list-bg-color: #374249;
 $stream-list-title-color: #f0f0f0;
 $stream-list-color: #787e80;
+$stream-list-category-color: #f0f0f0;
 $stream-list-selected-color: #45a7b9;
 $stream-list-selected-bg-color: rgba(69, 167, 185, 0.17);
 $stream-list-bg-hover-color: lighten($stream-list-bg-color, 2%);
