--- a/app/scss/light-theme.scss
+++ b/app/scss/light-theme.scss
@@ -13,6 +13,7 @@ $stream-search-bg-color: #dddddd;
 $stream-list-bg-color: #ececec;
 $stream-list-title-color: #495861;
 $stream-list-color: #787e80;
+$stream-list-category-color: #69543a;
 $stream-list-selected-color: #45a7b9;
 $stream-list-selected-bg-color: rgba(69, 167, 185, 0.17);
 $stream-list-bg-hover-color: $stream-list-selected-bg-color;
